--- a/WpfApplication3/Win/SettingsWindow.xaml
+++ b/WpfApplication3/Win/SettingsWindow.xaml
@@ -6,11 +6,15 @@
         <TabControl Margin="0">
             <TabItem FocusVisualStyle="{x:Null}" Header="软件设置">
                 <Grid Background="White">
-                    <TextBox HorizontalAlignment="Left" Height="23" Margin="85,10,0,0" TextWrapping="Wrap" Text="2011" VerticalAlignment="Top" Width="50"/>
-                    <TextBox HorizontalAlignment="Left" Height="23" Margin="152,9,0,0" TextWrapping="Wrap" Text="2018" VerticalAlignment="Top" Width="50"/>
-                    <TextBlock HorizontalAlignment="Left" Margin="10,10,0,0" TextWrapping="Wrap" Text="年份范围：" VerticalAlignment="Top"/>
-                    <TextBlock HorizontalAlignment="Left" Margin="140,13,0,0" TextWrapping="Wrap" Text="-" VerticalAlignment="Top"/>
-                    <Button x:Name="Button_保存设置" Content="保存" HorizontalAlignment="Left" Margin="138,184,0,0" VerticalAlignment="Top" Width="75" Click="Button_保存设置_Click"/>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition/>
+                        <ColumnDefinition/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox x:Name="TextBox_起始年" HorizontalAlignment="Left" Height="20" Margin="85,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50"/>
+                    <TextBox x:Name="TextBox_结束年" HorizontalAlignment="Left" Height="20" Margin="152,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" Grid.ColumnSpan="2"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="10,12,0,0" TextWrapping="Wrap" Text="年份范围：" VerticalAlignment="Top" Height="16" Width="70"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="140,11,0,0" TextWrapping="Wrap" Text="-" VerticalAlignment="Top" Height="16" Width="7"/>
+                    <Button x:Name="Button_保存设置" Content="保存" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Bottom" Width="75" Click="Button_保存设置_Click" Height="20" Grid.ColumnSpan="2"/>
                 </Grid>
             </TabItem>
             <TabItem FocusVisualStyle="{x:Null}" Header="修改密码">
@@ -22,13 +26,13 @@
                     <PasswordBox x:Name="PasswordBox_旧密码" HorizontalAlignment="Center" Margin="0,40,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2" Height="18"/>
                     <PasswordBox x:Name="PasswordBox_新密码" HorizontalAlignment="Center" Margin="0,80,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2" Height="18"/>
                     <PasswordBox x:Name="PasswordBox_重复新密码" HorizontalAlignment="Center" Margin="0,120,0,0" VerticalAlignment="Top" Width="99" Grid.ColumnSpan="2" Height="18"/>
-                    <Button FocusVisualStyle="{x:Null}" x:Name="Button_提交修改密码" Content="修改密码" HorizontalAlignment="Left" Margin="168,160,0,0" VerticalAlignment="Top" Width="74" Click="Button_提交修改密码_Click" Grid.ColumnSpan="2" Height="20"/>
+                    <Button FocusVisualStyle="{x:Null}" x:Name="Button_提交修改密码" Content="修改密码" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Bottom" Width="74" Click="Button_提交修改密码_Click" Grid.ColumnSpan="2" Height="20"/>
                     <TextBlock HorizontalAlignment="Left" Margin="55,40,0,0" TextWrapping="Wrap" Text="旧密码：" VerticalAlignment="Top" Height="16" Width="56"/>
                     <TextBlock HorizontalAlignment="Left" Margin="55,80,0,0" TextWrapping="Wrap" Text="新密码：" VerticalAlignment="Top" Height="16" Width="56"/>
                     <TextBlock HorizontalAlignment="Left" Margin="55,120,0,0" TextWrapping="Wrap" Text="重复新密码：" VerticalAlignment="Top" Height="16" Width="84"/>
                     <TextBlock x:Name="TextBlock_旧密码错误" Grid.Column="1" HorizontalAlignment="Left" Margin="70,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="Red" Width="113"/>
                     <TextBlock x:Name="TextBlock_新密码不一致" Grid.Column="1" HorizontalAlignment="Left" Margin="70,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="Red" Width="113"/>
-                    <TextBlock x:Name="TextBlock_密码修改成功" Grid.Column="1" HorizontalAlignment="Left" Margin="70,160,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="113" Foreground="Red"/>
+                    <TextBlock x:Name="TextBlock_密码修改成功" HorizontalAlignment="Left" Margin="144,160,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" Foreground="Red" Grid.ColumnSpan="2"/>
                 </Grid>
             </TabItem>
             <TabItem FocusVisualStyle="{x:Null}" Header="操作历史">
