--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -58,18 +58,17 @@
 
         <!--未登陆的遮盖面板-->
         <Grid x:Name="Grid_遮盖" Background="White" Visibility="Collapsed" >
-            <Image HorizontalAlignment="Right" Height="194" Margin="0,0,62,68" VerticalAlignment="Bottom" Width="538" Source="Image/Pyramid_Logo_V1_c_140204.png"/>
-            <Canvas HorizontalAlignment="Left" Height="190" Margin="72,35,0,0" VerticalAlignment="Top" Width="310" Background="#FF2CA6E0">
-                <Grid Background="White" Canvas.Left="5" Canvas.Top="22" Width="300" Height="163" >
-                    <TextBox Height="25" x:Name="TextBox_登陆_用户名" Width="200" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="93,22,0,0" Text="admin" VerticalAlignment="Top" />
-                    <PasswordBox x:Name="PasswordBox_登陆_密码" HorizontalAlignment="Left" Margin="93,59,0,0" VerticalAlignment="Top" Height="25" Width="200" FontSize="20"  />
-                    <Button FocusVisualStyle="{x:Null}" x:Name="Button_登陆_登陆" Content="登陆" HorizontalAlignment="Left" Margin="93,95,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_登陆_Click" OpacityMask="White"/>
-                    <Button FocusVisualStyle="{x:Null}" x:Name="Button_登陆_取消" Content="取消" HorizontalAlignment="Left" Margin="190,95,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_取消_Click" OpacityMask="White"/>
-                    <TextBlock HorizontalAlignment="Left" Margin="14,22,0,0" TextWrapping="Wrap" Text="用户名：" VerticalAlignment="Top"/>
-                    <TextBlock HorizontalAlignment="Left" Margin="14,59,0,0" TextWrapping="Wrap" Text="密  码：" VerticalAlignment="Top"/>
-                    <TextBlock x:Name="TextBlock_密码错误提示" HorizontalAlignment="Left" Margin="93,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="210" Height="28" Foreground="#FFA82323" />
-                </Grid>
-            </Canvas>
+            <Image HorizontalAlignment="Center" Height="119" Margin="112,186,556,264" VerticalAlignment="Center" Width="324" Source="Image/Pyramid_Logo_V1_c_140204.png"/>
+            <Grid Background="White" Canvas.Left="-93" Canvas.Top="216" Height="163" Margin="546,186,142,220" HorizontalAlignment="Center" VerticalAlignment="Center" >
+                <TextBox Height="25" x:Name="TextBox_登陆_用户名" Width="200" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="93,22,0,0" Text="admin" VerticalAlignment="Top" />
+                <PasswordBox x:Name="PasswordBox_登陆_密码" HorizontalAlignment="Left" Margin="93,59,0,0" VerticalAlignment="Top" Height="25" Width="200" FontSize="20"  />
+                <Button FocusVisualStyle="{x:Null}" x:Name="Button_登陆_登陆" Content="登陆" HorizontalAlignment="Left" Margin="93,95,0,0" VerticalAlignment="Top" Width="100" Height="25" Click="Button_登陆_登陆_Click" OpacityMask="White" Background="#FF036EB7" Foreground="White" FontWeight="Bold" BorderBrush="{x:Null}"/>
+                <Button FocusVisualStyle="{x:Null}" x:Name="Button_登陆_取消" Content="取消" HorizontalAlignment="Left" Margin="190,95,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_取消_Click" OpacityMask="White" Visibility="Collapsed"/>
+                <TextBlock HorizontalAlignment="Left" Margin="14,22,0,0" TextWrapping="Wrap" Text="用户名：" VerticalAlignment="Top"/>
+                <TextBlock HorizontalAlignment="Left" Margin="14,59,0,0" TextWrapping="Wrap" Text="密  码：" VerticalAlignment="Top"/>
+                <TextBlock x:Name="TextBlock_密码错误提示" HorizontalAlignment="Left" Margin="93,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="210" Height="28" Foreground="#FFA82323" />
+            </Grid>
+            <Grid HorizontalAlignment="Center" Margin="470,50,471,50" Width="1" Background="Gray" VerticalAlignment="Center" Height="300"/>
         </Grid>
     </Grid>
 </Window>
