--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -57,8 +57,8 @@
         <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Right" Margin="0,0,118,73" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="120"/>
 
         <!--未登陆的遮盖面板-->
-        <Grid x:Name="Grid_遮盖" Background="White" Visibility="Collapsed" >
-            <Image HorizontalAlignment="Center" Height="119" Margin="112,186,556,264" VerticalAlignment="Center" Width="324" Source="Image/Pyramid_Logo_V1_c_140204.png"/>
+        <Grid x:Name="Grid_遮盖" Background="White" >
+            <Image HorizontalAlignment="Center" Margin="206,181,546,281" VerticalAlignment="Center" Source="Image/Pyramid_Logo_V1_140204-01.png" Width="240" Height="110"/>
             <Grid Background="White" Canvas.Left="-93" Canvas.Top="216" Height="163" Margin="546,186,142,220" HorizontalAlignment="Center" VerticalAlignment="Center" >
                 <TextBox Height="25" x:Name="TextBox_登陆_用户名" Width="200" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="93,22,0,0" Text="admin" VerticalAlignment="Top" />
                 <PasswordBox x:Name="PasswordBox_登陆_密码" HorizontalAlignment="Left" Margin="93,59,0,0" VerticalAlignment="Top" Height="25" Width="200" FontSize="20"  />
@@ -68,7 +68,7 @@
                 <TextBlock HorizontalAlignment="Left" Margin="14,59,0,0" TextWrapping="Wrap" Text="密  码：" VerticalAlignment="Top"/>
                 <TextBlock x:Name="TextBlock_密码错误提示" HorizontalAlignment="Left" Margin="93,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="210" Height="28" Foreground="#FFA82323" />
             </Grid>
-            <Grid HorizontalAlignment="Center" Margin="470,50,471,50" Width="1" Background="Gray" VerticalAlignment="Center" Height="300"/>
+            <Grid HorizontalAlignment="Center" Margin="470,50,471,50" Width="1" Background="Gray" VerticalAlignment="Center" Height="200"/>
         </Grid>
     </Grid>
 </Window>
