--- a/WpfApplication3/Win/SettingsWindow.xaml
+++ b/WpfApplication3/Win/SettingsWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Name="Win_Settings" x:Class="Wpf.Win.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="设置" Height="300" Width="400" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14" FontFamily="SimSun">
+        Title="设置" Height="300" Width="400" WindowStartupLocation="CenterScreen" WindowStyle="ToolWindow" FontSize="14" FontFamily="SimSun" MinWidth="400" MinHeight="300">
     <Grid x:Name="Grid_Settings">
         <TabControl Margin="0">
             <TabItem FocusVisualStyle="{x:Null}" Header="软件设置">
@@ -12,9 +12,23 @@
                     </Grid.ColumnDefinitions>
                     <TextBox x:Name="TextBox_起始年" HorizontalAlignment="Left" Height="20" Margin="85,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50"/>
                     <TextBox x:Name="TextBox_结束年" HorizontalAlignment="Left" Height="20" Margin="152,10,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="50" Grid.ColumnSpan="2"/>
-                    <TextBlock HorizontalAlignment="Left" Margin="10,12,0,0" TextWrapping="Wrap" Text="年份范围：" VerticalAlignment="Top" Height="16" Width="70"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="10,13,0,0" TextWrapping="Wrap" Text="年份范围：" VerticalAlignment="Top" Height="16" Width="70"/>
                     <TextBlock HorizontalAlignment="Left" Margin="140,11,0,0" TextWrapping="Wrap" Text="-" VerticalAlignment="Top" Height="16" Width="7"/>
                     <Button x:Name="Button_保存设置" Content="保存" HorizontalAlignment="Center" Margin="0,0,0,10" VerticalAlignment="Bottom" Width="75" Click="Button_保存设置_Click" Height="25" Grid.ColumnSpan="2"/>
+                    <TextBlock HorizontalAlignment="Left" Margin="10,37,0,0" TextWrapping="Wrap" Text="初始金额：" VerticalAlignment="Top"/>
+                    <TextBox x:Name="Textbox_初始金额_1" HorizontalAlignment="Left" Height="20" Margin="17,35,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+                    <TextBlock x:Name="TextBlock_初始金额_1" HorizontalAlignment="Left" Margin="85,37,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="20" Grid.ColumnSpan="2" Width="117"/>
+                    <TextBlock x:Name="TextBlock_初始金额_2" HorizontalAlignment="Left" Margin="85,62,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="20" Grid.ColumnSpan="2" Width="117"/>
+                    <TextBlock x:Name="TextBlock_初始金额_4" HorizontalAlignment="Left" Margin="85,112,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="20" Grid.ColumnSpan="2" Width="117"/>
+                    <TextBlock x:Name="TextBlock_初始金额_3" HorizontalAlignment="Left" Margin="85,87,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="20" Grid.ColumnSpan="2" Width="117"/>
+                    <TextBlock x:Name="TextBlock_初始金额_5" HorizontalAlignment="Left" Margin="85,137,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="20" Grid.ColumnSpan="2" Width="117"/>
+                    <TextBlock x:Name="TextBlock_初始金额_6" HorizontalAlignment="Left" Margin="85,162,0,0" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Height="20" Grid.ColumnSpan="2" Width="117"/>
+                    <TextBox x:Name="Textbox_初始金额_2" HorizontalAlignment="Left" Height="20" Margin="17,60,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+                    <TextBox x:Name="Textbox_初始金额_3" HorizontalAlignment="Left" Height="20" Margin="17,85,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+                    <TextBox x:Name="Textbox_初始金额_4" HorizontalAlignment="Left" Height="20" Margin="17,110,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+                    <TextBox x:Name="Textbox_初始金额_5" HorizontalAlignment="Left" Height="20" Margin="17,135,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+                    <TextBox x:Name="Textbox_初始金额_6" HorizontalAlignment="Left" Height="20" Margin="17,160,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
+                    <TextBlock x:Name="TextBlock_保存成功" Grid.Column="1" HorizontalAlignment="Left" Margin="43,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="25" Width="126" Foreground="Red"/>
                 </Grid>
             </TabItem>
             <TabItem FocusVisualStyle="{x:Null}" Header="修改密码">
