--- a/WpfApplication3/Win/SettingsWindow.xaml
+++ b/WpfApplication3/Win/SettingsWindow.xaml
@@ -28,7 +28,7 @@
                     <TextBox x:Name="Textbox_初始金额_4" HorizontalAlignment="Left" Height="20" Margin="17,110,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
                     <TextBox x:Name="Textbox_初始金额_5" HorizontalAlignment="Left" Height="20" Margin="17,135,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
                     <TextBox x:Name="Textbox_初始金额_6" HorizontalAlignment="Left" Height="20" Margin="17,160,0,0" TextWrapping="Wrap" Text="0.0" VerticalAlignment="Top" Width="120" Grid.Column="1"/>
-                    <TextBlock x:Name="TextBlock_保存成功" Grid.Column="1" HorizontalAlignment="Left" Margin="43,202,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="25" Width="126" Foreground="Red"/>
+                    <TextBlock x:Name="TextBlock_保存成功" Grid.Column="1" HorizontalAlignment="Left" Margin="43,0,0,15" TextWrapping="Wrap" VerticalAlignment="Bottom" Height="16" Width="126" Foreground="Red"/>
                 </Grid>
             </TabItem>
             <TabItem FocusVisualStyle="{x:Null}" Header="修改密码">
@@ -44,8 +44,8 @@
                     <TextBlock HorizontalAlignment="Left" Margin="55,40,0,0" TextWrapping="Wrap" Text="旧密码：" VerticalAlignment="Top" Height="16" Width="56"/>
                     <TextBlock HorizontalAlignment="Left" Margin="55,80,0,0" TextWrapping="Wrap" Text="新密码：" VerticalAlignment="Top" Height="16" Width="56"/>
                     <TextBlock HorizontalAlignment="Left" Margin="55,120,0,0" TextWrapping="Wrap" Text="重复新密码：" VerticalAlignment="Top" Height="16" Width="84"/>
-                    <TextBlock x:Name="TextBlock_旧密码错误" Grid.Column="1" HorizontalAlignment="Left" Margin="70,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="Red" Width="113"/>
-                    <TextBlock x:Name="TextBlock_新密码不一致" Grid.Column="1" HorizontalAlignment="Left" Margin="70,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="Red" Width="113"/>
+                    <TextBlock x:Name="TextBlock_旧密码错误" Grid.Column="1" HorizontalAlignment="Left" Margin="70,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="Red" Width="113" OpacityMask="White"/>
+                    <TextBlock x:Name="TextBlock_新密码不一致" Grid.Column="1" HorizontalAlignment="Left" Margin="70,120,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Foreground="Red" Width="113" OpacityMask="White"/>
                     <TextBlock x:Name="TextBlock_密码修改成功" HorizontalAlignment="Left" Margin="144,160,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="200" Foreground="Red" Grid.ColumnSpan="2"/>
                 </Grid>
             </TabItem>
