--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -3,8 +3,7 @@
     <Grid x:Name="Grid_Main" >
         <!-- 菜单栏 -->
         <Menu Height="25" Margin="0,0,307,0" VerticalAlignment="Top" Width="200" HorizontalAlignment="Left" Background="{x:Null}" >
-            <MenuItem Header="设置" Height="25">
-                <MenuItem x:Name="MenuItem_设置" Header="设置" Click="MenuItem_设置_Click"/>
+            <MenuItem x:Name="MenuItem_设置" Header="设置" Height="25" Click="MenuItem_设置_Click">
             </MenuItem>
         </Menu>
         <!-- 放DataGrid的Grid -->
@@ -63,12 +62,11 @@
                 <TextBox Height="25" x:Name="TextBox_登陆_用户名" Width="200" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="93,22,0,0" Text="admin" VerticalAlignment="Top" />
                 <PasswordBox x:Name="PasswordBox_登陆_密码" HorizontalAlignment="Left" Margin="93,59,0,0" VerticalAlignment="Top" Height="25" Width="200" FontSize="20"  />
                 <Button FocusVisualStyle="{x:Null}" x:Name="Button_登陆_登陆" Content="登陆" HorizontalAlignment="Left" Margin="93,95,0,0" VerticalAlignment="Top" Width="100" Height="25" Click="Button_登陆_登陆_Click" OpacityMask="White" Background="#FF036EB7" Foreground="White" FontWeight="Bold" BorderBrush="{x:Null}" IsDefault="True"/>
-                <Button FocusVisualStyle="{x:Null}" x:Name="Button_登陆_取消" Content="取消" HorizontalAlignment="Left" Margin="190,95,0,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_登陆_取消_Click" OpacityMask="White" Visibility="Collapsed"/>
                 <TextBlock HorizontalAlignment="Left" Margin="14,22,0,0" TextWrapping="Wrap" Text="用户名：" VerticalAlignment="Top"/>
                 <TextBlock HorizontalAlignment="Left" Margin="14,59,0,0" TextWrapping="Wrap" Text="密  码：" VerticalAlignment="Top"/>
                 <TextBlock x:Name="TextBlock_密码错误提示" HorizontalAlignment="Left" Margin="93,125,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="210" Height="28" Foreground="#FFA82323" />
             </Grid>
-            <Grid HorizontalAlignment="Center" Margin="470,50,471,50" Width="1" Background="Gray" VerticalAlignment="Center" Height="200"/>
+            <Grid HorizontalAlignment="Center" Margin="470,50,471,50" Width="1" Background="Gray" VerticalAlignment="Center" Height="200" IsEnabled="False"/>
             <Button x:Name="Button_拷贝无密码数据库" Content="拷贝无密码数据库" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="150" Click="Button_拷贝无密码数据库_Click" Visibility="Collapsed"/>
         </Grid>
     </Grid>
