--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -12,17 +12,17 @@
             <DataGrid x:Name="DataGrid_Main" Margin="0" 
             	CellEditEnding="DataGrid_Main_CellEditEnding" 
             	BeginningEdit="DataGrid_Main_BeginningEdit" 
-            	AutoGenerateColumns="False" CanUserSortColumns="False">
+            	AutoGenerateColumns="False" CanUserAddRows="False" CanUserSortColumns="False">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="DBId" Visibility="Collapsed" Binding="{Binding DBId}"/>
-                    <DataGridTextColumn Header="序号" IsReadOnly="True" Binding="{Binding 序号}"/>
-                    <DataGridTextColumn Header="月" IsReadOnly="True" Binding="{Binding 月}"/>
-                    <DataGridTextColumn Header="日" Binding="{Binding 日}"/>
-                    <DataGridTextColumn Header="单位名称" Binding="{Binding 单位名称}" MinWidth="100"/>
-                    <DataGridTextColumn Header="用途" Binding="{Binding 用途}" MinWidth="100"/>
-                    <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="100"/>
-                    <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="100"/>
-                    <DataGridTextColumn Header="结余" Binding="{Binding 结余}" IsReadOnly="True" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="100"/>
+                    <!--<DataGridTextColumn Header="序号" IsReadOnly="True" Binding="{Binding 序号}"/>-->
+                    <DataGridTextColumn Header="月" IsReadOnly="True" Binding="{Binding 月}" MinWidth="24"/>
+                    <DataGridTextColumn Header="日" Binding="{Binding 日}" MinWidth="24"/>
+                    <DataGridTextColumn Header="单位名称" Binding="{Binding 单位名称}" MinWidth="240"/>
+                    <DataGridTextColumn Header="用途" Binding="{Binding 用途}" MinWidth="240"/>
+                    <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="102"/>
+                    <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="102"/>
+                    <DataGridTextColumn Header="结余" Binding="{Binding 结余}" IsReadOnly="True" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="112"/>
                 </DataGrid.Columns>
             </DataGrid>
         </Grid>
@@ -30,7 +30,7 @@
         <StatusBar Height="25" Margin="0" VerticalAlignment="Bottom" />
         <!--Button-->
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,133,10,0" VerticalAlignment="Top" Width="75" Height="25"  Click="Button_删除_Click"  />
-        <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click"   />
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新" Content="刷新" HorizontalAlignment="Right" Margin="0,207,10,0" VerticalAlignment="Top" Width="75" Height="25" Click="Button_刷新_Click"   />
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,0,10,113" VerticalAlignment="Bottom" Width="75" Height="25" Click="Button_导入Excel_Click"   />
         <Button FocusVisualStyle="{x:Null}" x:Name="Button_Excel" Content="导出数据" HorizontalAlignment="Right" Margin="0,0,10,143" VerticalAlignment="Bottom" Width="75" Click="Button_Excel_Click" Height="25"   />
 
@@ -48,12 +48,13 @@
         <TextBlock HorizontalAlignment="Right" Margin="0,0,570,35" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom"   />
         <TextBlock HorizontalAlignment="Right" Margin="0,0,243,35" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom"   />
         <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Right" Margin="0,0,418,34" TextWrapping="Wrap"  VerticalAlignment="Bottom"  Width="150"/>
-        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Right" Margin="0,0,95,34" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150"/>
+        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Right" Margin="0,0,10,34" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="235"/>
         <TextBlock HorizontalAlignment="Left" Margin="289,25,0,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" />
         <TextBlock HorizontalAlignment="Right" Margin="0,0,570,75" TextWrapping="Wrap" Text="借方发生额合计(月)：" VerticalAlignment="Bottom"   />
         <TextBlock HorizontalAlignment="Right" Margin="0,0,243,75" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom"   />
         <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Right" Margin="0,0,418,73" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150"/>
-        <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Right" Margin="0,0,95,73" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150"/>
+        <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Right" Margin="0,0,10,73" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="235"/>
+        <Button x:Name="Button_添加" Content="添加" HorizontalAlignment="Right" Margin="0,108,10,0" VerticalAlignment="Top" Width="75" Click="Button_添加_Click"/>
 
         <!--未登陆的遮盖面板-->
         <Grid x:Name="Grid_遮盖" Background="White" Visibility="Collapsed" >
