--- a/WpfApplication3/View/Pages/Page1.xaml
+++ b/WpfApplication3/View/Pages/Page1.xaml
@@ -4,10 +4,55 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="300" d:DesignWidth="300"
+      d:DesignHeight="600 " d:DesignWidth="1000"
 	Title="Page1">
 
     <Grid>
+        <!-- 放DataGrid的Grid -->
+        <Grid Margin="10,102,100,99">
+            <!-- 主要DataGrid -->
+            <DataGrid x:Name="DataGrid_Main" Margin="0" 
+            	
+            	
+            	AutoGenerateColumns="False">
+                <DataGrid.Columns>
+                    <DataGridTextColumn Header="DBId" Visibility="Collapsed" Binding="{Binding DBId}"/>
+                    <DataGridTextColumn Header="序号" IsReadOnly="True" Binding="{Binding 序号}" Visibility="Collapsed"/>
+                    <DataGridTextColumn Header="月" IsReadOnly="True" Binding="{Binding 月}" MinWidth="24"/>
+                    <DataGridTextColumn Header="日" Binding="{Binding 日}" MinWidth="40"/>
+                    <DataGridTextColumn Header="单位名称" Binding="{Binding 单位名称}" MinWidth="240"/>
+                    <DataGridTextColumn Header="用途" Binding="{Binding 用途}" MinWidth="240"/>
+                    <DataGridTextColumn Header="借方发生额" Binding="{Binding 借方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="102"/>
+                    <DataGridTextColumn Header="贷方发生额" Binding="{Binding 贷方发生额}" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="102"/>
+                    <DataGridTextColumn Header="结余" Binding="{Binding 结余}" IsReadOnly="True" ElementStyle="{DynamicResource TextBlockStyle_右对齐}" MinWidth="112"/>
+                </DataGrid.Columns>
+            </DataGrid>
+        </Grid>
+        <!--Button-->
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_删除" Content="删除" HorizontalAlignment="Right" Margin="0,133,10,0" VerticalAlignment="Top" Width="75" Height="25"   Focusable="False"  />
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_刷新" Content="保存" HorizontalAlignment="Right" Margin="0,198,10,0" VerticalAlignment="Top" Width="75" Height="25"  Focusable="False"   />
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_导入Excel" Content="导入数据" HorizontalAlignment="Right" Margin="0,0,10,113" VerticalAlignment="Bottom" Width="75" Height="25"  Focusable="False"   />
+        <Button FocusVisualStyle="{x:Null}" x:Name="Button_Excel" Content="导出数据" HorizontalAlignment="Right" Margin="0,0,10,143" VerticalAlignment="Bottom" Width="75"  Height="25" Focusable="False"   />
         
+        <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Year" HorizontalAlignment="Left" Margin="50,75,0,0" VerticalAlignment="Top" Width="80"  ToolTip="年份"   />
+        <ComboBox FocusVisualStyle="{x:Null}" x:Name="ComboBox_Month" HorizontalAlignment="Left" Margin="135,75,0,0" VerticalAlignment="Top" Width="60" IsReadOnly="True"  ToolTip="月份"   />
+
+        <!--TextBox-->
+        <TextBox x:Name="TextBox_承上月结余" HorizontalAlignment="Right" Margin="0,73,100,0" TextWrapping="Wrap" Text="0" VerticalAlignment="Top" Width="120"  IsReadOnly="True" Height="24" />
+
+        <!--TextBlock-->
+        <TextBlock HorizontalAlignment="Left" Margin="10,77,0,0" TextWrapping="Wrap" Text="日期:" VerticalAlignment="Top" Height="20"   />
+        <TextBlock HorizontalAlignment="Right" Margin="0,75,225,0" TextWrapping="Wrap" Text="承上月结余:" VerticalAlignment="Top"  RenderTransformOrigin="1.37,0.44" Height="20" OpacityMask="White"  />
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,570,35" TextWrapping="Wrap" Text="借方发生额累计(年)：" VerticalAlignment="Bottom"   />
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,243,35" TextWrapping="Wrap" Text="贷方发生额累计(年)：" VerticalAlignment="Bottom"   />
+        <TextBlock x:Name="TextBlock_借方发生额累计" HorizontalAlignment="Right" Margin="0,0,418,34" TextWrapping="Wrap"  VerticalAlignment="Bottom"  Width="150"/>
+        <TextBlock x:Name="TextBlock_贷方发生额累计" HorizontalAlignment="Right" Margin="0,0,95,34" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150"/>
+        <TextBlock HorizontalAlignment="Left" Margin="289,25,0,0" TextWrapping="Wrap" Text="银行日记账" VerticalAlignment="Top" FontSize="26" FontWeight="Bold" />
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,570,75" TextWrapping="Wrap" Text="借方发生额合计(月)：" VerticalAlignment="Bottom"   />
+        <TextBlock HorizontalAlignment="Right" Margin="0,0,243,75" TextWrapping="Wrap" Text="贷方发生额合计(月)：" VerticalAlignment="Bottom"   />
+        <TextBlock x:Name="TextBlock_借方发生额合计" HorizontalAlignment="Right" Margin="0,0,418,73" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150"/>
+        <TextBlock x:Name="TextBlock_贷方发生额合计" HorizontalAlignment="Right" Margin="0,0,95,73" TextWrapping="Wrap"  VerticalAlignment="Bottom" Width="150"/>
+        <Button x:Name="Button_添加" Content="添加" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75"  Focusable="False" Height="25"/>
+
     </Grid>
 </Page>
