--- a/WpfApplication3/View/Pages/Page1.xaml
+++ b/WpfApplication3/View/Pages/Page1.xaml
@@ -14,7 +14,7 @@
             <DataGrid x:Name="DataGrid_Main" Margin="0" 
             	
             	
-            	AutoGenerateColumns="False" BeginningEdit="DataGrid_Main_BeginningEdit" CellEditEnding="DataGrid_Main_CellEditEnding">
+            	AutoGenerateColumns="False" BeginningEdit="DataGrid_Main_BeginningEdit" CellEditEnding="DataGrid_Main_CellEditEnding" FontSize="14">
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="DBId" Visibility="Collapsed" Binding="{Binding DBId}"/>
                     <DataGridTextColumn Header="序号" IsReadOnly="True" Binding="{Binding 序号}" Visibility="Collapsed"/>
