设置窗口加上去了

--- a/WpfApplication3/NewWindow.xaml
+++ b/WpfApplication3/NewWindow.xaml
@@ -40,8 +40,14 @@
         <Button x:Name="Button_最大化" Content="口" HorizontalAlignment="Right" Margin="0,0,38,0" VerticalAlignment="Top" Width="28" Height="20" Template="{DynamicResource ButtonControlTemplate_最大化}" Click="Button_最大化_Click"/>
         <Button x:Name="Button_最小化" Content="-" HorizontalAlignment="Right" Margin="0,0,66,0" VerticalAlignment="Top" Width="28" Height="20" Template="{DynamicResource ButtonControlTemplate_最小化}" Click="Button_最小化_Click"/>
         <Menu HorizontalAlignment="Left" Height="25" Margin="10,10,0,0" VerticalAlignment="Top" Width="460" Background="{x:Null}" Foreground="White">
-            <MenuItem Header="文件" Height="25"/>
-            <MenuItem Header="帮助"/>
+            <MenuItem Header="文件" Height="25">
+                <MenuItem x:Name="MenuItem_设置" Header="设置" Foreground="Black" Click="MenuItem_设置_Click"/>
+                <Separator Margin="0"/>
+                <MenuItem x:Name="MenuItem_退出" Header="退出" Foreground="Black" Click="MenuItem_退出_Click"/>
+            </MenuItem>
+            <MenuItem x:Name="MenuItem_帮助" Header="帮助">
+                <MenuItem x:Name="MenuItem_关于" Header="关于" Foreground="Black" Click="MenuItem_关于_Click"/>
+            </MenuItem>
         </Menu>
     </Grid>
 </Window>
