--- a/WpfApplication3/MainWindow.xaml
+++ b/WpfApplication3/MainWindow.xaml
@@ -57,7 +57,7 @@
         <Button x:Name="Button_添加" Content="添加" HorizontalAlignment="Right" Margin="0,103,10,0" VerticalAlignment="Top" Width="75" Click="Button_添加_Click" Focusable="False" Height="25"/>
 
         <!--未登陆的遮盖面板-->
-        <Grid x:Name="Grid_遮盖" Background="White" Visibility="Collapsed" >
+        <Grid x:Name="Grid_遮盖" Background="White" >
             <Image HorizontalAlignment="Center" Margin="206,181,546,281" VerticalAlignment="Center" Source="View/Image/Pyramid_Logo_V1_140204-01.png" Width="240" Height="110"/>
             <Grid Background="White" Canvas.Left="-93" Canvas.Top="216" Height="163" Margin="546,186,142,220" HorizontalAlignment="Center" VerticalAlignment="Center" >
                 <TextBox Height="25" x:Name="TextBox_登陆_用户名" Width="200" HorizontalAlignment="Left" VerticalContentAlignment="Center" Margin="93,22,0,0" Text="admin" VerticalAlignment="Top" />
